--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -74,7 +74,7 @@
                         <a href="https://rics.uninova.pt">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-atom fa-stack-1x fa-inverse"></i>
+                                <i class="fas fa-atom fa-stack-1x fa-inverse"></i>
                             </span>
                         </a>
                     </li>
