--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,16 +19,16 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="{{ "COVOICE-19/css/bootstrap.min.css" }}">
+    <link rel="stylesheet" href="{{ "https://ricardosperes.github.io/COVOICE-19/css/bootstrap.min.css" }}">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ "COVOICE-19/css/clean-blog.css" }}">
+    <link rel="stylesheet" href="{{ "https://ricardosperes.github.io/COVOICE-19/css/clean-blog.css" }}">
 	
 	<!-- Adjust Colors -->
-    <link rel="stylesheet" href="{{ "COVOICE-19/colorscheme.css"  }}">
+    <link rel="stylesheet" href="{{ "https://ricardosperes.github.io/COVOICE-19/colorscheme.css"  }}">
 
     <!-- Pygments Github CSS -->
-    <link rel="stylesheet" href="{{ "COVOICE-19/css/syntax.css"  }}">
+    <link rel="stylesheet" href="{{ "https://ricardosperes.github.io/COVOICE-19/css/syntax.css"  }}">
 
     <!-- Custom Fonts -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -64,7 +64,7 @@
 
 	<!-- Custom Theme JavaScript -->
 	<!--<script src="{{ "/js/clean-blog.min.js " | prepend: site.baseurl | prepend: site.url }}"></script>-->
-	<script src="{{"COVOICE-19/js/clean-blog.min.js"}}"></script>
+	<script src="{{"https://ricardosperes.github.io/COVOICE-19/js/clean-blog.min.js"}}"></script>
 	{% include analytics.html %}
 	
 </head>
