--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -79,7 +79,7 @@
                         </a>
                     </li>
                 </ul>
-                <!--<p class="copyright text-muted"> Copyright © <a href="http://ahmetcecen.github.io/" target="_blank">Ahmet Cecen</a>,  <a href="http://mined.gatech.edu/" target="_blank">MINED@GaTech</a> and <a href="https://github.com/projectpages" target="_blank">Project Pages</a> 2016. </p>-->
+                <p class="copyright text-muted"> Copyright © {{ 'now' | date: "%Y" }} COVOICE-19 - Leveraging AI for the benefit of society</p>
             </div>
         </div>
     </div>
